[adaptation-sony-kumano] Drop droidian-kumano-wlan-enable, replaced by a global quirk
Signed-off-by: Eugenio Paolantonio (g7) <me@medesimo.eu>

--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Architecture: arm64
 Depends: ${misc:Depends},
          adaptation-hybris-api30-phone,
          adaptation-sony-kumano-configs (= ${binary:Version}),
+         droidian-quirks-device (>= 30),
 Description: Sony Xperia Kumano - metapackage
 
 Package: adaptation-sony-kumano-configs
