[adaptation-sony-griffin] Fix erroneous circular dependency
Whoops

Signed-off-by: Eugenio Paolantonio (g7) <me@medesimo.eu>

--- a/debian/control
+++ b/debian/control
@@ -37,7 +37,7 @@ Description: Sony Xperia 5 - adaptation configurations
 Package: adaptation-sony-griffin
 Architecture: arm64
 Depends: ${misc:Depends},
-         adaptation-sony-griffin (= ${binary:Version}),
+         adaptation-sony-kumano (= ${binary:Version}),
          linux-bootimage-sony-griffin,
          adaptation-sony-griffin-configs,
 Description: Sony Xperia 1 - metapackage
